--- a/src/Style/Contact-style.css
+++ b/src/Style/Contact-style.css
@@ -9,12 +9,38 @@
     margin-top: 10%;
 }
 
+.number{
+    text-decoration: none ;
+    font-size: 40px;
+}
+
+.number:hover{
+font-size: 60px;
+}
+
+.email-a{
+    text-decoration: none;
+}
+
+.email-a:hover{
+    font-size: 40px;
+}
+
 .phone-email{
     margin-top: 10%;
 }
 
-.No_number{
-    margin-top: 20%;
-    font-size: 15px;
-    text-align: left;
+.phone-h1{
+    margin-top: 10vh
+}
+
+.contact-content{
+    list-style-type: none;
+}
+
+/* Messenger */
+
+.messenger__title{
+    margin-top: 5%;
+    margin-bottom: 20px;
 }
