--- a/src/Style/Header-style.css
+++ b/src/Style/Header-style.css
@@ -1,19 +1,40 @@
+
 .header{
-    background-color: black;
-    color: white;
+    background-color: #f3f5f8;
+    color: black;
 }
 
 .header__title{
     font-size: 40px;
     display: inline-block;
-    flex-direction: column;
-    text-align: center;
-    padding-top: 20%;
+    padding-top: 10%;
 }
 
 .header__p{
-    padding-top: 10%;
-    text-align: center;
-    font-size: 18px;
-    padding-bottom: 1%;
+    margin-top: 5%;
+    font-size: 20px;
+}
+
+.header__span{
+    color: purple;
+    font-size: 50px;
+    font-weight: 600;
+}
+
+.header__button{
+margin-top: 40px;
+margin-left: 30px;
+}
+
+.header__btn{
+    color: rgb(55, 55, 55);
+    text-decoration: none;
+    background-color: rgb(214, 202, 202);
+    padding: 10px;
+    transition: .2s linear;
+}
+
+.header__btn:hover{
+    color: black;
+    background-color: #c9c9c9;
 }
