--- a/src/Style/Home-style.css
+++ b/src/Style/Home-style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: black;
-    color: white
+    background-color: #f3f5f8;
+    color: black
 }
 
 .mickl-picture{
@@ -27,4 +27,29 @@ body{
 .Anonim{
     margin-top: 30%;
     text-align: right;
+}
+
+.content__list{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    border: 1px white solid;
+    padding: 20px;
+    padding-top: 5px
+}
+
+.home-h2{
+    font-size: 50px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.content__item{
+    font-size: 20px;
 }
